tests/macros/select/validate_on_key.stderr
error: option `validate_on_key` does not exist for kind `select`
 --> tests/macros/select/validate_on_key.rs:2:44
  |
2 |     let q = requestty::questions![Select { validate_on_key: todo!() }];
  |                                            ^^^^^^^^^^^^^^^
