tests/macros/select/validate_on_key.rs
fn main() {
    let q = requestty::questions![Select { validate_on_key: todo!() }];
}
